obj/integrador.output
Rules useless in parser due to conflicts

    4 line: /* vacío */

   20 saltoOpcional: '\n'

   48 sentenciaSwitch: /* vacío */

   53 sentenciaReturn: /* vacío */

   73 parametro: TIPO_DATO IDENTIFICADOR


Estado 2 conflictos: 10 desplazamiento/reducción, 10 reducción/reducción
Estado 4 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 14 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 15 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 16 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 17 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 18 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 19 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 20 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 21 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 23 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 25 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 27 conflictos: 1 desplazamiento/reducción, 21 reducción/reducción
Estado 28 conflictos: 10 reducción(ones)/reducción(ones)
Estado 35 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 49 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 59 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 83 conflictos: 1 reducción(ones)/reducción(ones)
Estado 90 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 100 conflictos: 6 desplazamiento(s)/reducción(ones)
Estado 125 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 131 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 133 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 136 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 137 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 138 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 139 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 140 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 141 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 142 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 143 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 144 conflictos: 10 desplazamiento/reducción, 13 reducción/reducción
Estado 146 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 155 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 156 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 157 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 158 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 159 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 160 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 161 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 162 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 163 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 164 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 165 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 170 conflictos: 1 reducción(ones)/reducción(ones)
Estado 174 conflictos: 13 reducción(ones)/reducción(ones)
Estado 191 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 203 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 212 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 226 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 228 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción
Estado 229 conflictos: 10 desplazamiento/reducción, 12 reducción/reducción
Estado 246 conflictos: 10 desplazamiento/reducción, 11 reducción/reducción


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line
    3      | ERROR_LEXICO

    4 line: /* vacío */
    5     | '\n'
    6     | listadoDeSentenciasDeDeclaracion saltoOpcional
    7     | invocacionFuncion saltoOpcional
    8     | prototipoFuncion saltoOpcional
    9     | desarrolloFuncion saltoOpcional
   10     | sentenciaSwitch saltoOpcional
   11     | sentenciaWhile saltoOpcional
   12     | sentenciaFor saltoOpcional
   13     | sentenciaDoWhile saltoOpcional
   14     | sentenciaIfElse saltoOpcional
   15     | sentenciaAsignacion saltoOpcional
   16     | incrementoDecremento saltoOpcional
   17     | error saltoOpcional

   18 saltoOpcional: /* vacío */
   19              | '\n' saltoOpcional
   20              | '\n'

   21 invocacionFuncion: IDENTIFICADOR '(' listaParametrosInvocacion ')' ';'

   22 listadoDeSentencias: /* vacío */
   23                    | sentenciaSwitch listadoDeSentencias
   24                    | sentenciaDoWhile listadoDeSentencias
   25                    | sentenciaFor listadoDeSentencias
   26                    | sentenciaWhile listadoDeSentencias
   27                    | sentenciaIfElse listadoDeSentencias
   28                    | sentenciaAsignacion listadoDeSentencias
   29                    | sentenciaReturn listadoDeSentencias
   30                    | listadoDeSentenciasDeDeclaracion listadoDeSentencias
   31                    | invocacionFuncion saltoOpcional
   32                    | incrementoDecremento listadoDeSentencias
   33                    | '\n' listadoDeSentencias

   34 sentenciaDoWhile: DO saltoOpcional '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

   35 sentenciaFor: FOR '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

   36 sentenciaDecOAsig: sentenciaAsignacion
   37                  | sentenciaDeclaracion

   38 incrementoParaFor: IDENTIFICADOR MAS_MAS
   39                  | IDENTIFICADOR MENOS_MENOS

   40 incrementoDecremento: IDENTIFICADOR MAS_MAS ';'
   41                     | IDENTIFICADOR MENOS_MENOS ';'

   42 $@1: /* vacío */

   43 sentenciaIfElse: IF '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse
   44                | error saltoOpcional

   45 sentenciaElse: /* vacío */
   46              | ELSE saltoOpcional '{' listadoDeSentencias '}'

   47 sentenciaWhile: WHILE '(' exp ')' saltoOpcional '{' listadoDeSentencias '}'

   48 sentenciaSwitch: /* vacío */
   49                | SWITCH '(' exp ')' saltoOpcional '{' sentenciaCase '}'

   50 sentenciaCase: /* vacío */
   51              | CASE exp ':' listadoDeSentencias BREAK ';'
   52              | sentenciaCase DEFAULT ':' listadoDeSentencias

   53 sentenciaReturn: /* vacío */
   54                | RETURN exp ';'

   55 listadoDeSentenciasDeDeclaracion: /* vacío */
   56                                 | sentenciaDeclaracion
   57                                 | sentenciaDeclaracion ';' listadoDeSentenciasDeDeclaracion

   58 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR ';'
   59                     | TIPO_DATO listaIdentificadores ';'
   60                     | TIPO_DATO IDENTIFICADOR '[' expC ']' ';'
   61                     | TIPO_DATO IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   62                     | TIPO_DATO '*' IDENTIFICADOR ';'
   63                     | error saltoOpcional

   64 desarrolloFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametrosFuncion ')' saltoOpcional '{' listadoDeSentencias '}' ';'

   65 prototipoFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametrosPrototipo ')' ';'

   66 auxi: expC ',' auxi
   67     | expC

   68 sentenciaAsignacion: parametro '=' exp ';'
   69                    | parametro MAS_IGUAL exp ';'
   70                    | parametro MENOS_IGUAL exp ';'
   71                    | parametro POR_IGUAL exp ';'
   72                    | parametro DIVIDIDO_IGUAL exp ';'

   73 parametro: TIPO_DATO IDENTIFICADOR
   74          | IDENTIFICADOR

   75 listaIdentificadores: identificadorA
   76                     | listaIdentificadores ',' identificadorA

   77 identificadorA: IDENTIFICADOR
   78               | IDENTIFICADOR '=' exp
   79               | IDENTIFICADOR MAS_IGUAL exp
   80               | IDENTIFICADOR MENOS_IGUAL exp
   81               | IDENTIFICADOR POR_IGUAL exp
   82               | IDENTIFICADOR DIVIDIDO_IGUAL exp

   83 listaParametrosPrototipo: /* vacío */
   84                         | TIPO_DATO
   85                         | TIPO_DATO ',' listaParametrosPrototipo
   86                         | listaParametrosFuncion

   87 listaParametrosFuncion: /* vacío */
   88                       | TIPO_DATO IDENTIFICADOR
   89                       | TIPO_DATO IDENTIFICADOR ',' listaParametrosFuncion

   90 listaParametrosInvocacion: /* vacío */
   91                          | expC parametroExtra

   92 parametroExtra: ',' expC parametroExtra
   93               | /* vacío */

   94 exp: LITERAL_CADENA
   95    | expC

   96 expC: IDENTIFICADOR
   97     | CHAR
   98     | expC '-' expC
   99     | expC '>' expC
  100     | expC '<' expC
  101     | expC IGUALDAD expC
  102     | expC MAYOR_IGUAL expC
  103     | expC MENOR_IGUAL expC
  104     | expC DESIGUALDAD expC
  105     | expC AND expC
  106     | expC OR expC
  107     | DECIMAL
  108     | HEXA
  109     | OCTAL
  110     | NUM_R
  111     | expC '*' expC
  112     | expC '/' expC
  113     | expC '+' expC


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 5 19 20 33
'(' (40) 21 34 35 43 47 49 64 65
')' (41) 21 34 35 43 47 49 64 65
'*' (42) 62 111
'+' (43) 113
',' (44) 66 76 85 89 92
'-' (45) 98
'/' (47) 112
':' (58) 51 52
';' (59) 21 34 35 40 41 51 54 57 58 59 60 61 62 64 65 68 69 70 71 72
'<' (60) 100
'=' (61) 61 68 78
'>' (62) 99
'[' (91) 60 61
']' (93) 60 61
'{' (123) 34 35 43 46 47 49 61 64
'}' (125) 34 35 43 46 47 49 61 64
error (256) 17 44 63
FOR (258) 35
IF (259) 43
ELSE (260) 46
RETURN (261) 54
SWITCH (262) 49
DECIMAL (263) 107
HEXA (264) 108
OCTAL (265) 109
NUM_R (266) 110
IDENTIFICADOR (267) 21 38 39 40 41 58 60 61 62 64 65 73 74 77 78 79
    80 81 82 88 89 96
TIPO_DATO (268) 58 59 60 61 62 64 65 73 84 85 88 89
DO (269) 34
WHILE (270) 34 47
CHAR (271) 97
LITERAL_CADENA (272) 94
MAYOR_IGUAL (273) 102
MENOR_IGUAL (274) 103
IGUALDAD (275) 101
AND (276) 105
OR (277) 106
DESIGUALDAD (278) 104
CASE (279) 51
BREAK (280) 51
DEFAULT (281) 52
MAS_IGUAL (282) 69 79
MENOS_IGUAL (283) 70 80
POR_IGUAL (284) 71 81
DIVIDIDO_IGUAL (285) 72 82
MAS_MAS (286) 38 40
MENOS_MENOS (287) 39 41
ERROR_LEXICO (288) 3


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2 3, en la derecha: 0 2
line (53)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17, en la derecha:
    2
saltoOpcional (54)
    en la izquierda: 18 19 20, en la derecha: 6 7 8 9 10 11 12 13 14
    15 16 17 19 31 34 35 43 44 46 47 49 63 64
invocacionFuncion (55)
    en la izquierda: 21, en la derecha: 7 31
listadoDeSentencias (56)
    en la izquierda: 22 23 24 25 26 27 28 29 30 31 32 33, en la derecha:
    23 24 25 26 27 28 29 30 32 33 34 35 43 46 47 51 52 64
sentenciaDoWhile (57)
    en la izquierda: 34, en la derecha: 13 24
sentenciaFor (58)
    en la izquierda: 35, en la derecha: 12 25
sentenciaDecOAsig (59)
    en la izquierda: 36 37, en la derecha: 35
incrementoParaFor (60)
    en la izquierda: 38 39, en la derecha: 35
incrementoDecremento (61)
    en la izquierda: 40 41, en la derecha: 16 32
sentenciaIfElse (62)
    en la izquierda: 43 44, en la derecha: 14 27
$@1 (63)
    en la izquierda: 42, en la derecha: 43
sentenciaElse (64)
    en la izquierda: 45 46, en la derecha: 43
sentenciaWhile (65)
    en la izquierda: 47, en la derecha: 11 26
sentenciaSwitch (66)
    en la izquierda: 48 49, en la derecha: 10 23
sentenciaCase (67)
    en la izquierda: 50 51 52, en la derecha: 49 52
sentenciaReturn (68)
    en la izquierda: 53 54, en la derecha: 29
listadoDeSentenciasDeDeclaracion (69)
    en la izquierda: 55 56 57, en la derecha: 6 30 57
sentenciaDeclaracion (70)
    en la izquierda: 58 59 60 61 62 63, en la derecha: 37 56 57
desarrolloFuncion (71)
    en la izquierda: 64, en la derecha: 9
prototipoFuncion (72)
    en la izquierda: 65, en la derecha: 8
auxi (73)
    en la izquierda: 66 67, en la derecha: 61 66
sentenciaAsignacion (74)
    en la izquierda: 68 69 70 71 72, en la derecha: 15 28 36
parametro (75)
    en la izquierda: 73 74, en la derecha: 68 69 70 71 72
listaIdentificadores (76)
    en la izquierda: 75 76, en la derecha: 59 76
identificadorA (77)
    en la izquierda: 77 78 79 80 81 82, en la derecha: 75 76
listaParametrosPrototipo (78)
    en la izquierda: 83 84 85 86, en la derecha: 65 85
listaParametrosFuncion (79)
    en la izquierda: 87 88 89, en la derecha: 64 86 89
listaParametrosInvocacion (80)
    en la izquierda: 90 91, en la derecha: 21
parametroExtra (81)
    en la izquierda: 92 93, en la derecha: 91 92
exp (82)
    en la izquierda: 94 95, en la derecha: 34 43 47 49 51 54 68 69
    70 71 72 78 79 80 81 82
expC (83)
    en la izquierda: 96 97 98 99 100 101 102 103 104 105 106 107 108
    109 110 111 112 113, en la derecha: 35 60 61 66 67 91 92 95 98
    99 100 101 102 103 104 105 106 111 112 113


estado 0

    0 $accept: . input $end

    ERROR_LEXICO  desplazar e ir al estado 1

    $default  reduce usando la regla 1 (input)

    input  ir al estado 2


estado 1

    3 input: ERROR_LEXICO .

    $default  reduce usando la regla 3 (input)


estado 2

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 3
    error          desplazar e ir al estado 4
    FOR            desplazar e ir al estado 5
    IF             desplazar e ir al estado 6
    SWITCH         desplazar e ir al estado 7
    IDENTIFICADOR  desplazar e ir al estado 8
    TIPO_DATO      desplazar e ir al estado 9
    DO             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    '\n'           desplazar e ir al estado 12

    $end           [reduce usando la regla 4 (line)]
    $end           [reduce usando la regla 48 (sentenciaSwitch)]
    $end           [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    error          [reduce usando la regla 4 (line)]
    error          [reduce usando la regla 48 (sentenciaSwitch)]
    error          [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    FOR            [reduce usando la regla 4 (line)]
    FOR            [reduce usando la regla 48 (sentenciaSwitch)]
    FOR            [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    IF             [reduce usando la regla 4 (line)]
    IF             [reduce usando la regla 48 (sentenciaSwitch)]
    IF             [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    SWITCH         [reduce usando la regla 4 (line)]
    SWITCH         [reduce usando la regla 48 (sentenciaSwitch)]
    SWITCH         [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    IDENTIFICADOR  [reduce usando la regla 4 (line)]
    IDENTIFICADOR  [reduce usando la regla 48 (sentenciaSwitch)]
    IDENTIFICADOR  [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    TIPO_DATO      [reduce usando la regla 4 (line)]
    TIPO_DATO      [reduce usando la regla 48 (sentenciaSwitch)]
    TIPO_DATO      [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    DO             [reduce usando la regla 4 (line)]
    DO             [reduce usando la regla 48 (sentenciaSwitch)]
    DO             [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    WHILE          [reduce usando la regla 4 (line)]
    WHILE          [reduce usando la regla 48 (sentenciaSwitch)]
    WHILE          [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]
    '\n'           [reduce usando la regla 4 (line)]
    '\n'           [reduce usando la regla 48 (sentenciaSwitch)]
    '\n'           [reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)]

    line                              ir al estado 13
    invocacionFuncion                 ir al estado 14
    sentenciaDoWhile                  ir al estado 15
    sentenciaFor                      ir al estado 16
    incrementoDecremento              ir al estado 17
    sentenciaIfElse                   ir al estado 18
    sentenciaWhile                    ir al estado 19
    sentenciaSwitch                   ir al estado 20
    listadoDeSentenciasDeDeclaracion  ir al estado 21
    sentenciaDeclaracion              ir al estado 22
    desarrolloFuncion                 ir al estado 23
    prototipoFuncion                  ir al estado 24
    sentenciaAsignacion               ir al estado 25
    parametro                         ir al estado 26


estado 3

    0 $accept: input $end .

    $default  aceptar


estado 4

   17 line: error . saltoOpcional
   44 sentenciaIfElse: error . saltoOpcional
   63 sentenciaDeclaracion: error . saltoOpcional

    '\n'  desplazar e ir al estado 27

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 28


estado 5

   35 sentenciaFor: FOR . '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 29


estado 6

   43 sentenciaIfElse: IF . '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse

    '('  desplazar e ir al estado 30


estado 7

   49 sentenciaSwitch: SWITCH . '(' exp ')' saltoOpcional '{' sentenciaCase '}'

    '('  desplazar e ir al estado 31


estado 8

   21 invocacionFuncion: IDENTIFICADOR . '(' listaParametrosInvocacion ')' ';'
   40 incrementoDecremento: IDENTIFICADOR . MAS_MAS ';'
   41                     | IDENTIFICADOR . MENOS_MENOS ';'
   74 parametro: IDENTIFICADOR .

    MAS_MAS      desplazar e ir al estado 32
    MENOS_MENOS  desplazar e ir al estado 33
    '('          desplazar e ir al estado 34

    $default  reduce usando la regla 74 (parametro)


estado 9

   58 sentenciaDeclaracion: TIPO_DATO . IDENTIFICADOR ';'
   59                     | TIPO_DATO . listaIdentificadores ';'
   60                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' ';'
   61                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   62                     | TIPO_DATO . '*' IDENTIFICADOR ';'
   64 desarrolloFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametrosFuncion ')' saltoOpcional '{' listadoDeSentencias '}' ';'
   65 prototipoFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametrosPrototipo ')' ';'
   73 parametro: TIPO_DATO . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 35
    '*'            desplazar e ir al estado 36
